# agent-skills

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAILURE-MODE-INDEX.md  README.md  SECURITY.md  llms.txt
.claude-plugin/: marketplace.json
.codex-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
adr-authoring/: README.md  SKILL.md
agent-council/: README.md  SKILL.md  pyproject.toml
agent-council/agent_council/: __init__.py  __main__.py  cli.py  config.py  convergence.py  graph.py  guardrails.py  state.py
agent-council/agent_council/phases/: __init__.py  compose.py  cross_examine.py  position.py  premortem.py  select.py  synthesis.py
agent-council/references/: configuration.md  convergence.md  debate-protocol.md
agent-council/scripts/: bootstrap.py
agent-council/templates/: personas.json
agent-council/tests/: test_select.py
agent-evals-and-observability/: README.md  SKILL.md
agent-skills/: README.md  SKILL.md
api-design-and-evolution/: README.md  SKILL.md
arr-cli/: README.md  SKILL.md
artifact-pyramids/: README.md  SKILL.md
autogen/: README.md  SKILL.md
backend-engineering/: README.md  SKILL.md
brand-designer/: README.md
c4-diagramming/: README.md  SKILL.md
chief-of-staff-methodology/: README.md  SKILL.md
cli-builder/: README.md  SKILL.md
color-management/: README.md  SKILL.md
confluence-cli/: README.md  SKILL.md
crewai/: README.md  SKILL.md
crowdsec/: README.md  SKILL.md
daily-life-discovery/: README.md  SKILL.md
data-architect/: README.md
data-engineering/: README.md  (+1 more)
(+899 files in other folders)
